vm_config_notes/rules.v4
# Generated by iptables-save v1.8.7 on Fri Nov 15 16:32:23 2024
*filter
:INPUT ACCEPT [4:208]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4:912]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p tcp -m tcp --dport 10000:10100 -j ACCEPT
-A FORWARD -i ens5 -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o ens5 -j ACCEPT
COMMIT
# Completed on Fri Nov 15 16:32:23 2024
# Generated by iptables-save v1.8.7 on Fri Nov 15 16:32:23 2024
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Fri Nov 15 16:32:23 2024
